packages/dartcv/src/imgproc/imgproc.h

// Blurs an image using a Gaussian filter.
// void cv::cv_GaussianBlur (InputArray src, OutputArray dst, CvSize ksize, double sigmaX, double sigmaY=0, int borderType=BORDER_DEFAULT, AlgorithmHint hint=cv::ALGO_HINT_DEFAULT)
CvStatus* cv_GaussianBlur(
    Mat src, Mat dst, CvSize ps, double sX, double sY, int bt, CvCallback_0 callback
);
// Calculates the cv_Laplacian of an image.
// void cv::cv_Laplacian (InputArray src, OutputArray dst, int ddepth, int ksize=1, double scale=1, double delta=0, int borderType=BORDER_DEFAULT)
CvStatus* cv_Laplacian(
    Mat src,
    Mat dst,
    int dDepth,
    int kSize,
    double scale,
    double delta,
    int borderType,
    CvCallback_0 callback
);
// Calculates the first x- or y- image derivative using cv_Scharr operator.
// void cv::Scharr (InputArray src, OutputArray dst, int ddepth, int dx, int dy, double scale=1, double delta=0, int borderType=BORDER_DEFAULT)
CvStatus* cv_Scharr(
    Mat src,
    Mat dst,
    int dDepth,
    int dx,
    int dy,
    double scale,
    double delta,
    int borderType,
    CvCallback_0 callback
);
// Calculates the first, second, third, or mixed image derivatives using an extended cv_Sobel operator.
// void cv::Sobel (InputArray src, OutputArray dst, int ddepth, int dx, int dy, int ksize=3, double scale=1, double delta=0, int borderType=BORDER_DEFAULT)
CvStatus* cv_Sobel(
    Mat src,
    Mat dst,
    int ddepth,
    int dx,
    int dy,
    int ksize,
    double scale,
    double delta,
    int borderType,
    CvCallback_0 callback
);
// SECTION - Planar Subdivision
CvStatus* cv_Subdiv2D_create(Subdiv2D* rval);
CvStatus* cv_Subdiv2D_create_1(CvRect rect, Subdiv2D* rval);
void cv_Subdiv2D_close(Subdiv2DPtr self);
CvStatus* cv_Subdiv2D_edgeDst(
    Subdiv2D self, int edge, CvPoint2f* dstpt, int* rval, CvCallback_0 callback
);
CvStatus* cv_Subdiv2D_edgeOrg(
    Subdiv2D self, int edge, CvPoint2f* orgpt, int* rval, CvCallback_0 callback
);
CvStatus* cv_Subdiv2D_findNearest(
    Subdiv2D self, CvPoint2f pt, CvPoint2f* nearestPt, int* rval, CvCallback_0 callback
);
CvStatus* cv_Subdiv2D_getEdge(
    Subdiv2D self, int edge, int nextEdgeType, int* rval, CvCallback_0 callback
);
CvStatus* cv_Subdiv2D_getEdgeList(Subdiv2D self, Vec4f** rval, size_t* size, CvCallback_0 callback);
CvStatus* cv_Subdiv2D_getLeadingEdgeList(
    Subdiv2D self, VecI32* leadingEdgeList, CvCallback_0 callback
);
CvStatus* cv_Subdiv2D_getTriangleList(
    Subdiv2D self, Vec6f** rval, size_t* size, CvCallback_0 callback
);
CvStatus* cv_Subdiv2D_getVertex(
    Subdiv2D self, int vertex, int* firstEdge, CvPoint2f* rval, CvCallback_0 callback
);
CvStatus* cv_Subdiv2D_getVoronoiFacetList(
    Subdiv2D self,
    VecI32 idx,
    VecVecPoint2f* facetList,
    VecPoint2f* facetCenters,
    CvCallback_0 callback
);
CvStatus* cv_Subdiv2D_initDelaunay(Subdiv2D self, CvRect rect, CvCallback_0 callback);
CvStatus* cv_Subdiv2D_insert(Subdiv2D self, CvPoint2f pt, int* rval, CvCallback_0 callback);
CvStatus* cv_Subdiv2D_insertVec(Subdiv2D self, VecPoint2f ptvec, CvCallback_0 callback);
CvStatus* cv_Subdiv2D_locate(
    Subdiv2D self, CvPoint2f pt, int* edge, int* vertex, int* rval, CvCallback_0 callback
);
CvStatus* cv_Subdiv2D_nextEdge(Subdiv2D self, int edge, int* rval, CvCallback_0 callback);
CvStatus* cv_Subdiv2D_rotateEdge(
    Subdiv2D self, int edge, int rotate, int* rval, CvCallback_0 callback
);
CvStatus* cv_Subdiv2D_symEdge(Subdiv2D self, int edge, int* rval, CvCallback_0 callback);
// Creates a smart pointer to a cv::CLAHE class and initializes it.
// Ptr< CLAHE > cv::createCLAHE (double clipLimit=40.0, CvSize tileGridSize=CvSize(8, 8))

CvStatus* cv_CLAHE_create(CLAHE* rval);
CvStatus* cv_CLAHE_create_1(double clipLimit, CvSize tileGridSize, CLAHE* rval);
void cv_CLAHE_close(CLAHEPtr self);
CvStatus* cv_CLAHE_apply(CLAHE self, Mat src, Mat dst, CvCallback_0 callback);
CvStatus* cv_CLAHE_collectGarbage(CLAHE self, CvCallback_0 callback);
double cv_CLAHE_getClipLimit(CLAHE self);
void cv_CLAHE_setClipLimit(CLAHE self, double clipLimit);
CvSize* cv_CLAHE_getTilesGridSize(CLAHE self);
void cv_CLAHE_setTilesGridSize(CLAHE self, CvSize size);
// Finds out if there is any intersection between two rotated rectangles.
// int cv::rotatedRectangleIntersection (const RotatedRect &rect1, const RotatedRect &rect2, OutputArray intersectingRegion)

// SECTION - Motion Analysis and Object Tracking
// Adds an image to the accumulator image.
// void cv::accumulate (InputArray src, InputOutputArray dst, InputArray mask=noArray())
CvStatus* cv_accumulate(Mat src, Mat dst, CvCallback_0 callback);
CvStatus* cv_accumulate_1(Mat src, Mat dst, Mat mask, CvCallback_0 callback);
// Adds the per-element product of two input images to the accumulator image.
// void cv::accumulateProduct (InputArray src1, InputArray src2, InputOutputArray dst, InputArray mask=noArray())
CvStatus* cv_accumulateProduct(Mat src1, Mat src2, Mat dst, CvCallback_0 callback);
CvStatus* cv_accumulateProduct_1(Mat src1, Mat src2, Mat dst, Mat mask, CvCallback_0 callback);
// Adds the square of a source image to the accumulator image.
// void cv::accumulateSquare (InputArray src, InputOutputArray dst, InputArray mask=noArray())
CvStatus* cv_accumulateSquare(Mat src, Mat dst, CvCallback_0 callback);
CvStatus* cv_accumulateSquare_1(Mat src, Mat dst, Mat mask, CvCallback_0 callback);
// Updates a running average.
// void cv::accumulateWeighted (InputArray src, InputOutputArray dst, double alpha, InputArray mask=noArray())
CvStatus* cv_accumulatedWeighted(Mat src, Mat dst, double alpha, CvCallback_0 callback);
// Finds circles in a grayscale image using the Hough transform.
// void cv::HoughCircles (InputArray image, OutputArray circles, int method, double dp, double minDist, double param1=100, double param2=100, int minRadius=0, int maxRadius=0)
CvStatus* cv_HoughCircles(
    Mat src, Mat circles, int method, double dp, double minDist, CvCallback_0 callback
);
CvStatus* cv_HoughCircles_1(
    Mat src,
    Mat circles,
    int method,
    double dp,
    double minDist,
    double param1,
    double param2,
    int minRadius,
    int maxRadius,
    CvCallback_0 callback
);
// Finds lines in a binary image using the standard Hough transform.
// void cv::HoughLines (InputArray image, OutputArray lines, double rho, double theta, int threshold, double srn=0, double stn=0, double min_theta=0, double max_theta=CV_PI)
CvStatus* cv_HoughLines(
    Mat src,
    Mat lines,
    double rho,
    double theta,
    int threshold,
    double srn,
    double stn,
    double min_theta,
    double max_theta,
    CvCallback_0 callback
);
// Finds line segments in a binary image using the probabilistic Hough transform.
// void cv::HoughLinesP (InputArray image, OutputArray lines, double rho, double theta, int threshold, double minLineLength=0, double maxLineGap=0)
CvStatus* cv_HoughLinesP(
    Mat src, Mat lines, double rho, double theta, int threshold, CvCallback_0 callback
);
CvStatus* cv_HoughLinesP_1(
    Mat src,
    Mat lines,
    double rho,
    double theta,
    int threshold,
    double minLineLength,
    double maxLineGap,
    CvCallback_0 callback
);
// Finds lines in a set of points using the standard Hough transform.
// void cv::HoughLinesPointSet (InputArray point, OutputArray lines, int lines_max, int threshold, double min_rho, double max_rho, double rho_step, double min_theta, double max_theta, double theta_step)
CvStatus* cv_HoughLinesPointSet(
    Mat points,
    Mat lines,
    int lines_max,
    int threshold,
    double min_rho,
    double max_rho,
    double rho_step,
    double min_theta,
    double max_theta,
    double theta_step,
    CvCallback_0 callback
);