lib/src/g/imgproc.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:dartcv4/dartcv.dart')
library;

import 'dart:ffi' as ffi;
import 'package:dartcv4/src/g/types.g.dart' as imp1;
import '' as self;

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CLAHE, Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_CLAHE_apply(
  CLAHE self,
  Mat src,
  Mat dst,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Void Function(CLAHEPtr)>()
external void cv_CLAHE_close(
  CLAHEPtr self,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(CLAHE, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_CLAHE_collectGarbage(
  CLAHE self,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<CLAHE>)>()
external ffi.Pointer<CvStatus> cv_CLAHE_create(
  ffi.Pointer<CLAHE> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Double, CvSize, ffi.Pointer<CLAHE>)>()
external ffi.Pointer<CvStatus> cv_CLAHE_create_1(
  double clipLimit,
  CvSize tileGridSize,
  ffi.Pointer<CLAHE> rval,
);

@ffi.Native<ffi.Double Function(CLAHE)>()
external double cv_CLAHE_getClipLimit(
  CLAHE self,
);

@ffi.Native<ffi.Pointer<CvSize> Function(CLAHE)>()
external ffi.Pointer<CvSize> cv_CLAHE_getTilesGridSize(
  CLAHE self,
);

@ffi.Native<ffi.Void Function(CLAHE, ffi.Double)>()
external void cv_CLAHE_setClipLimit(
  CLAHE self,
  double clipLimit,
);

@ffi.Native<ffi.Void Function(CLAHE, CvSize)>()
external void cv_CLAHE_setTilesGridSize(
  CLAHE self,
  CvSize size,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, CvSize, ffi.Double, ffi.Double, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_GaussianBlur(
  Mat src,
  Mat dst,
  CvSize ps,
  double sX,
  double sY,
  int bt,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, ffi.Int, ffi.Double, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_HoughCircles(
  Mat src,
  Mat circles,
  int method,
  double dp,
  double minDist,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Double, ffi.Double,
        ffi.Double, ffi.Double, ffi.Int, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_HoughCircles_1(
  Mat src,
  Mat circles,
  int method,
  double dp,
  double minDist,
  double param1,
  double param2,
  int minRadius,
  int maxRadius,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Double, ffi.Double, ffi.Int,
        ffi.Double, ffi.Double, ffi.Double, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_HoughLines(
  Mat src,
  Mat lines,
  double rho,
  double theta,
  int threshold,
  double srn,
  double stn,
  double min_theta,
  double max_theta,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, ffi.Double, ffi.Double, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_HoughLinesP(
  Mat src,
  Mat lines,
  double rho,
  double theta,
  int threshold,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Double, ffi.Double, ffi.Int,
        ffi.Double, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_HoughLinesP_1(
  Mat src,
  Mat lines,
  double rho,
  double theta,
  int threshold,
  double minLineLength,
  double maxLineGap,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat,
        Mat,
        ffi.Int,
        ffi.Int,
        ffi.Double,
        ffi.Double,
        ffi.Double,
        ffi.Double,
        ffi.Double,
        ffi.Double,
        imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_HoughLinesPointSet(
  Mat points,
  Mat lines,
  int lines_max,
  int threshold,
  double min_rho,
  double max_rho,
  double rho_step,
  double min_theta,
  double max_theta,
  double theta_step,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Int, ffi.Double,
        ffi.Double, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Laplacian(
  Mat src,
  Mat dst,
  int dDepth,
  int kSize,
  double scale,
  double delta,
  int borderType,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Int, ffi.Int,
        ffi.Double, ffi.Double, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Scharr(
  Mat src,
  Mat dst,
  int dDepth,
  int dx,
  int dy,
  double scale,
  double delta,
  int borderType,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int,
        ffi.Double, ffi.Double, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Sobel(
  Mat src,
  Mat dst,
  int ddepth,
  int dx,
  int dy,
  int ksize,
  double scale,
  double delta,
  int borderType,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Void Function(Subdiv2DPtr)>()
external void cv_Subdiv2D_close(
  Subdiv2DPtr self,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<Subdiv2D>)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_create(
  ffi.Pointer<Subdiv2D> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(CvRect, ffi.Pointer<Subdiv2D>)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_create_1(
  CvRect rect,
  ffi.Pointer<Subdiv2D> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Subdiv2D, ffi.Int, ffi.Pointer<CvPoint2f>,
        ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_edgeDst(
  Subdiv2D self,
  int edge,
  ffi.Pointer<CvPoint2f> dstpt,
  ffi.Pointer<ffi.Int> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Subdiv2D, ffi.Int, ffi.Pointer<CvPoint2f>,
        ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_edgeOrg(
  Subdiv2D self,
  int edge,
  ffi.Pointer<CvPoint2f> orgpt,
  ffi.Pointer<ffi.Int> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Subdiv2D, CvPoint2f, ffi.Pointer<CvPoint2f>,
        ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_findNearest(
  Subdiv2D self,
  CvPoint2f pt,
  ffi.Pointer<CvPoint2f> nearestPt,
  ffi.Pointer<ffi.Int> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Subdiv2D, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_getEdge(
  Subdiv2D self,
  int edge,
  int nextEdgeType,
  ffi.Pointer<ffi.Int> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Subdiv2D, ffi.Pointer<ffi.Pointer<Vec4f>>,
        ffi.Pointer<ffi.Size>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_getEdgeList(
  Subdiv2D self,
  ffi.Pointer<ffi.Pointer<Vec4f>> rval,
  ffi.Pointer<ffi.Size> size,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Subdiv2D, ffi.Pointer<VecI32>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_getLeadingEdgeList(
  Subdiv2D self,
  ffi.Pointer<VecI32> leadingEdgeList,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Subdiv2D, ffi.Pointer<ffi.Pointer<Vec6f>>,
        ffi.Pointer<ffi.Size>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_getTriangleList(
  Subdiv2D self,
  ffi.Pointer<ffi.Pointer<Vec6f>> rval,
  ffi.Pointer<ffi.Size> size,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Subdiv2D, ffi.Int, ffi.Pointer<ffi.Int>,
        ffi.Pointer<CvPoint2f>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_getVertex(
  Subdiv2D self,
  int vertex,
  ffi.Pointer<ffi.Int> firstEdge,
  ffi.Pointer<CvPoint2f> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Subdiv2D, VecI32, ffi.Pointer<VecVecPoint2f>,
        ffi.Pointer<VecPoint2f>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_getVoronoiFacetList(
  Subdiv2D self,
  VecI32 idx,
  ffi.Pointer<VecVecPoint2f> facetList,
  ffi.Pointer<VecPoint2f> facetCenters,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Subdiv2D, CvRect, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_initDelaunay(
  Subdiv2D self,
  CvRect rect,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Subdiv2D, CvPoint2f, ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_insert(
  Subdiv2D self,
  CvPoint2f pt,
  ffi.Pointer<ffi.Int> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Subdiv2D, VecPoint2f, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_insertVec(
  Subdiv2D self,
  VecPoint2f ptvec,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Subdiv2D, CvPoint2f, ffi.Pointer<ffi.Int>,
        ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_locate(
  Subdiv2D self,
  CvPoint2f pt,
  ffi.Pointer<ffi.Int> edge,
  ffi.Pointer<ffi.Int> vertex,
  ffi.Pointer<ffi.Int> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Subdiv2D, ffi.Int, ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_nextEdge(
  Subdiv2D self,
  int edge,
  ffi.Pointer<ffi.Int> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Subdiv2D, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_rotateEdge(
  Subdiv2D self,
  int edge,
  int rotate,
  ffi.Pointer<ffi.Int> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Subdiv2D, ffi.Int, ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Subdiv2D_symEdge(
  Subdiv2D self,
  int edge,
  ffi.Pointer<ffi.Int> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_accumulate(
  Mat src,
  Mat dst,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_accumulateProduct(
  Mat src1,
  Mat src2,
  Mat dst,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_accumulateProduct_1(
  Mat src1,
  Mat src2,
  Mat dst,
  Mat mask,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_accumulateSquare(
  Mat src,
  Mat dst,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_accumulateSquare_1(
  Mat src,
  Mat dst,
  Mat mask,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_accumulate_1(
  Mat src,
  Mat dst,
  Mat mask,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_accumulatedWeighted(
  Mat src,
  Mat dst,
  double alpha,
  imp1.CvCallback_0 callback,
);
